Meta-cli: genesis

--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -5,6 +5,7 @@ resolver = "2"
 members = [
     "core",
     "db/sqlite",
+    "db/redb",
     "meta-server/server-node",
     "meta-server/web-server",
     "wasm",
