--- a/meta-secret/wasm/Cargo.toml
+++ b/meta-secret/wasm/Cargo.toml
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 meta-secret-core = { path = "../core" }
 meta-server-node = { path = "../meta-server/server-node" }
+secrecy = "0.10.3"
 
 anyhow.workspace = true
 
