build android lib in earthly

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ infra/.secret
 /infra/k8s/meta-secret-server/build/
 /infra/k8s/Taskfile.yml
 /infra/k3d/Taskfile.yml
+/meta-secret/meta-cli/meta-secret.redb
