--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -54,7 +54,7 @@ uuid = { version = "1.3.0", features = ["v4", "js"] }
 
 # Networking
 axum = "0.8.1"
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
 tokio = { version = "1.44.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 http = "1.3.1"
