--- a/meta-secret/meta-cli/Cargo.toml
+++ b/meta-secret/meta-cli/Cargo.toml
@@ -12,6 +12,7 @@ anyhow.workspace = true
 secrecy = "0.10.3"
 
 clap = { version = "4.5.37", features = ["derive"] }
+dialoguer = "0.11.0"
 
 serde.workspace = true
 serde_yaml.workspace = true
