--- a/meta-secret/meta-cli/Cargo.toml
+++ b/meta-secret/meta-cli/Cargo.toml
@@ -13,6 +13,8 @@ secrecy = "0.10.3"
 
 clap = { version = "4.5.37", features = ["derive"] }
 dialoguer = "0.11.0"
+strum = "0.26"
+strum_macros = "0.26"
 
 serde.workspace = true
 serde_yaml.workspace = true
