--- a/meta-secret/meta-cli/Cargo.toml
+++ b/meta-secret/meta-cli/Cargo.toml
@@ -18,6 +18,7 @@ strum_macros = "0.26"
 
 serde.workspace = true
 serde_yaml.workspace = true
+serde_json.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
