--- a/meta-secret/meta-cli/Cargo.toml
+++ b/meta-secret/meta-cli/Cargo.toml
@@ -22,3 +22,4 @@ serde_json.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+tera = "1.20.0"
