--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: '23'
           
       - name: Build Wasm Package
+        working-directory: meta-secret
         run: earthly +wasm-build-local
         
       - name: Install Dependencies for Web UI
