--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.META_SECRET_IO_DEPLOY_KEY }}
+          deploy_key: ${{ secrets.META_SECRET_GH_PAT }}
           external_repository: meta-secret/meta-secret.github.io
           publish_branch: main
           publish_dir: meta-secret/target/web-cli/ui/dist
