--- a/meta-secret/web-cli/ui/package.json
+++ b/meta-secret/web-cli/ui/package.json
@@ -16,13 +16,13 @@
     "@headlessui/vue": "1.7.23",
     "@heroicons/vue": "2.2.0",
     "meta-secret-web-cli": "file:./pkg",
-    "pinia": "3.0.0",
-    "qr-code-styling": "1.6.0-rc.1",
+    "pinia": "3.0.2",
+    "qr-code-styling": "1.9.2",
     "serve": "14.2.4",
-    "vite-plugin-wasm": "3.3.0",
+    "vite-plugin-wasm": "3.4.1",
     "vue": "3.5.13",
-    "vue-github-button": "3.1.0",
-    "vue-router": "4.4.5",
+    "vue-github-button": "3.1.3",
+    "vue-router": "4.5.1",
     "wasm-pack": "0.13.1"
   },
   "devDependencies": {
