--- a/meta-secret/web-cli/ui/package.json
+++ b/meta-secret/web-cli/ui/package.json
@@ -26,33 +26,33 @@
     "wasm-pack": "0.13.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "1.10.4",
+    "@rushstack/eslint-patch": "1.11.0",
     "@types/jsdom": "21.1.7",
-    "@types/node": "22.5.3",
+    "@types/node": "22.15.3",
     "@vitejs/plugin-vue": "5.2.3",
     "@vitejs/plugin-vue-jsx": "4.1.2",
-    "@vue/eslint-config-prettier": "9.0.0",
+    "@vue/eslint-config-prettier": "10.2.0",
     "@vue/eslint-config-typescript": "11.0.3",
     "@vue/test-utils": "2.4.6",
-    "@vue/tsconfig": "0.5.1",
-    "autoprefixer": "10.4.20",
-    "cypress": "13.14.1",
+    "@vue/tsconfig": "0.7.0",
+    "autoprefixer": "10.4.21",
+    "cypress": "14.3.2",
     "eslint": "8.57.0",
-    "eslint-plugin-cypress": "3.5.0",
-    "eslint-plugin-vue": "9.28.0",
-    "jsdom": "25.0.0",
-    "postcss": "8.4.44",
-    "prettier": "3.3.3",
+    "eslint-plugin-cypress": "3.6.0",
+    "eslint-plugin-vue": "9.33.0",
+    "jsdom": "26.1.0",
+    "postcss": "8.5.3",
+    "prettier": "3.5.3",
     "qr-scanner": "1.4.2",
-    "start-server-and-test": "2.0.5",
+    "start-server-and-test": "2.0.11",
     "tailwindcss": "3.4.10",
-    "typescript": "5.5.4",
+    "typescript": "5.8.3",
     "vite": "6.3.4",
     "vite-plugin-wasm": "3.4.1",
     "vite-plugin-wasm-pack": "0.1.12",
     "vitest": "3.1.2",
-    "vue-tsc": "2.1.4",
-    "webpack": "^5.94.0",
-    "webpack-cli": "5.1.4"
+    "vue-tsc": "2.2.10",
+    "webpack": "5.99.7",
+    "webpack-cli": "6.0.1"
   }
 }
