--- a/meta-secret/wasm/Cargo.toml
+++ b/meta-secret/wasm/Cargo.toml
@@ -21,7 +21,7 @@ async-trait.workspace = true
 serde.workspace = true
 
 tracing.workspace = true
-tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }
+tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "ansi", "time"] }
 
 # Add explicit uuid dependency for wasm
 uuid.workspace = true
@@ -34,6 +34,7 @@ rexie = "0.6.2"
 
 serde-wasm-bindgen = "0.6.5"
 wasm-bindgen-futures = "0.4.50"
+time = { version = "0.3.41", features = ["wasm-bindgen"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
