--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ infra/.secret
 /meta-secret/meta-cli/example/a
 /meta-secret/meta-cli/example/b
 /meta-secret/meta-cli/example/c
+/infra/Taskfile.yml
