--- a/meta-secret/db/redb/Cargo.toml
+++ b/meta-secret/db/redb/Cargo.toml
@@ -18,3 +18,7 @@ serde_derive.workspace = true
 redb = "2.5.0"
 tracing.workspace = true
 
+[dev-dependencies]
+tempfile = "3.20.0"
+tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
+
