--- a/meta-secret/web-cli/ui/package.json
+++ b/meta-secret/web-cli/ui/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/vue": "1.7.23",
     "@heroicons/vue": "2.2.0",
+    "bip39": "^3.1.0",
     "meta-secret-web-cli": "file:./pkg",
     "pinia": "3.0.2",
     "qr-code-styling": "1.9.2",
