[Mobile][iOS] Master key generation + app manager init

--- a/meta-secret/wasm/Cargo.toml
+++ b/meta-secret/wasm/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 crate-type = ["cdylib", "rlib"]
 
 [features]
+mobile = []
 default = ["console_error_panic_hook"]
 
 [dependencies]
