--- a/meta-secret/mobile/android/Cargo.toml
+++ b/meta-secret/mobile/android/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 [lib]
 name = "mobile"
 crate-type = ["lib", "cdylib", "staticlib"]
-path = "src/mobile.rs"
 
 [features]
 default = []
@@ -14,22 +13,16 @@ mobile_only = []
 
 [dependencies]
 meta-secret-core = { path = "../../core", features = ["mobile"] }
-meta-server-node = { path = "../../meta-server/server-node", features = ["test-framework"] }
-thiserror.workspace = true
+meta-secret-wasm = { path = "../../wasm", features = ["mobile"] }
+meta-db-sqlite = { path = "../../db/sqlite" }
 anyhow.workspace = true
-derive_more.workspace = true
-async-std = { workspace = true }
-serde.workspace = true
+once_cell = "1.21.1"
 serde_json.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 tracing-attributes.workspace = true
 tokio = { version = "1.44.1", features = ["rt", "sync", "time"] }
 futures = "0.3.30"
-reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
-# Указываем rustls для всех крейтов, которые используют TLS
-hyper = { workspace = true, default-features = false, features = ["http1", "http2"] }
-hyper-rustls = { version = "0.27.0", default-features = false, features = ["http1", "http2", "tls12"] }
 jni = "0.21.1"
 
 [dev-dependencies]
