--- a/meta-secret/mobile/android/Cargo.toml
+++ b/meta-secret/mobile/android/Cargo.toml
@@ -15,6 +15,7 @@ mobile_only = []
 meta-secret-core = { path = "../../core", features = ["mobile"] }
 meta-secret-wasm = { path = "../../wasm", features = ["mobile"] }
 meta-db-sqlite = { path = "../../db/sqlite" }
+mobile-common = { path = "../common" }
 anyhow.workspace = true
 once_cell = "1.21.1"
 serde_json.workspace = true
