--- a/meta-secret/mobile/ios/Cargo.toml
+++ b/meta-secret/mobile/ios/Cargo.toml
@@ -15,9 +15,13 @@ mobile_only = []
 meta-secret-core = { path = "../../core", features = ["mobile"] }
 meta-secret-wasm = { path = "../../wasm", features = ["mobile"] }
 meta-db-sqlite = { path = "../../db/sqlite" }
+mobile-common = { path = "../common" }
 anyhow.workspace = true
 tracing.workspace = true
 tokio = { version = "1.44.1", features = ["rt", "sync", "time"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "json"], default-features = false }
+serde_json = "1.0.140"
+async-trait = "0.1.88"
 once_cell = "1.21.1"
 
 [dev-dependencies]
