--- a/meta-secret/mobile/ios/Cargo.toml
+++ b/meta-secret/mobile/ios/Cargo.toml
@@ -23,9 +23,7 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "m
 serde_json = "1.0.140"
 async-trait = "0.1.88"
 once_cell = "1.21.1"
+libsqlite3-sys.workspace = true
 
 [dev-dependencies]
 tokio = { version = "1.44.1", features = ["full"] }
-
-[target.'cfg(target_os = "android")'.lib]
-crate-type = ["cdylib"]
