--- a/meta-secret/mobile/android/Cargo.toml
+++ b/meta-secret/mobile/android/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mobile-ios"
+name = "mobile-android"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,9 +14,10 @@ mobile_only = []
 [dependencies]
 meta-secret-core = { path = "../../core", features = ["mobile"] }
 mobile-common = { path = "../common" }
-tokio = { version = "1.44.1", features = ["rt", "sync", "time"] }
 once_cell = "1.21.1"
 serde_json.workspace = true
+tokio = { version = "1.44.1", features = ["rt", "sync", "time"] }
+jni = "0.21.1"
 
 [dev-dependencies]
 tokio = { version = "1.44.1", features = ["full"] }
