--- a/meta-secret/mobile/common/Cargo.toml
+++ b/meta-secret/mobile/common/Cargo.toml
@@ -9,3 +9,5 @@ meta-secret-wasm = { path = "../../wasm", features = ["mobile"] }
 meta-db-sqlite = { path = "../../db/sqlite" }
 anyhow.workspace = true
 tracing.workspace = true
+once_cell = "1.20.2"
+tokio = { version = "1.44.0", features = ["rt", "macros"] }
