--- a/meta-secret/meta-server/web-server/Cargo.toml
+++ b/meta-secret/meta-server/web-server/Cargo.toml
@@ -28,3 +28,6 @@ async-std.workspace = true
 tokio-tungstenite = "0.26"
 futures-util = "0.3"
 flume.workspace = true
+
+[dev-dependencies]
+meta-secret-core = { path = "../../core", features = ["test-framework"] }
