--- a/meta-secret/mobile/common/Cargo.toml
+++ b/meta-secret/mobile/common/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 meta-secret-core = { path = "../../core", features = ["mobile"] }
-meta-secret-wasm = { path = "../../wasm", features = ["mobile"] }
 meta-db-sqlite = { path = "../../db/sqlite" }
 anyhow.workspace = true
 tracing.workspace = true
+once_cell = "1.20.2"
+tokio = { version = "1.44.0", features = ["rt", "macros"] }
